@@ -147,6 +147,7 @@ treetest() {
 dotests hbackup
 dotests nhbackup
 dotests "nhbackup --sftp localhost"
+dotests "nhbackup --no-recheck-hash"
 dotests "nhbackup --verbose --hint-file ,test/hints"
 treetest
 
